Python API issue: attributes.active_color vs vertex_colors.active #98267

Closed
opened 2022-05-19 19:32:04 +02:00 by Dalai Felinto · 10 comments

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-19 10:04, hash: 4fc96e5000
Worked: n/a

Short description of error
The values I get from vertex_colors.active is different than from attributes.active_color.

Exact steps for others to reproduce the error
Open and run the Python script there (see the results in the console):

attribute_bug.blend

Note: This mesh above is part of the cloth brush icon from the icons_geom.blend.

But I can also reproduce it with from scratch by painting a plane with some non-white colors like this:

image.png

**Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-19 10:04, hash: `4fc96e5000` Worked: n/a **Short description of error** The values I get from `vertex_colors.active` is different than from `attributes.active_color`. **Exact steps for others to reproduce the error** Open and run the Python script there (see the results in the console): [attribute_bug.blend](https://archive.blender.org/developer/F13091277/attribute_bug.blend) Note: This mesh above is part of the cloth brush icon from the icons_geom.blend. But I can also reproduce it with from scratch by painting a plane with some non-white colors like this: ![image.png](https://archive.blender.org/developer/F13091259/image.png)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Added subscriber: @HooglyBoogly
Removed subscriber: @dfelinto

Added subscriber: @HooglyBoogly Removed subscriber: @dfelinto
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Owner

Setting status to confirmed, but not setting as a bug yet. Waiting for Hans to confirm it.

Setting status to confirmed, but not setting as a bug yet. Waiting for Hans to confirm it.

Added subscriber: @brecht

Added subscriber: @brecht

This was an intentional design choice. For attributes I wanted to have all color values in the same linear color space in the API and UI, regardless if they are stored as byte or float. That way the values match in color pickers, spreadsheet, shader nodes, geometry nodes.

It's also just the general convention for any colors in scene data to be linear, with the old vertex colors as perhaps the last exception.

This was an intentional design choice. For attributes I wanted to have all color values in the same linear color space in the API and UI, regardless if they are stored as byte or float. That way the values match in color pickers, spreadsheet, shader nodes, geometry nodes. It's also just the general convention for any colors in scene data to be linear, with the old vertex colors as perhaps the last exception.
Author
Owner

I talked to @brecht and it seems that this is intentional. I think we should mention this in the release notes of whenever we introduced this (with an example of how to convert the values from one to the other?). I couldn't find it in any of the 3.x release notes so far.

I talked to @brecht and it seems that this is intentional. I think we should mention this in the release notes of whenever we introduced this (with an example of how to convert the values from one to the other?). I couldn't find it in any of the 3.x release notes so far.

This issue was referenced by 469ee7ff15

This issue was referenced by 469ee7ff1529a1b28ce0b300835ebc42d5c5362f

I've updated the release notes now. In order to conveniently convert to/from sRGB we need some API functions, for which I added a patch.

I've updated the release notes now. In order to conveniently convert to/from sRGB we need some API functions, for which I added a patch.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-05-23 15:37:03 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98267
No description provided.