source/blender/imbuf/intern/colormanagement_inline.c
@@ -37,4 +37,28 @@ void IMB_colormanagement_rgb_to_xyz(float xyz[3], const float rgb[3])
   mul_v3_m3v3(xyz, imbuf_rgb_to_xyz, rgb);
 }
 
+void IMB_colormanagement_rec709_to_rgb(float rgb[3], const float rec709[3])
+{
+  mul_v3_m3v3(rgb, imbuf_rec709_to_xyz, rec709);
+  mul_v3_m3v3(rgb, imbuf_xyz_to_rgb, rgb);
+}
+
+void IMB_colormanagement_rgb_to_rec709(float rec709[3], const float rgb[3])
+{
+  mul_v3_m3v3(rec709, imbuf_rgb_to_xyz, rgb);
+  mul_v3_m3v3(rec709, imbuf_xyz_to_rec709, rec709);
+}
+
+void IMB_colormanagement_aces_to_rgb(float rgb[3], const float aces[3])
+{
+  mul_v3_m3v3(rgb, imbuf_aces_to_xyz, aces);
+  mul_v3_m3v3(rgb, imbuf_xyz_to_rgb, rgb);
+}
+
+void IMB_colormanagement_rgb_to_aces(float aces[3], const float rgb[3])
+{
+  mul_v3_m3v3(aces, imbuf_rgb_to_xyz, rgb);
+  mul_v3_m3v3(aces, imbuf_xyz_to_aces, aces);
+}
+
 #endif /* __IMB_COLORMANAGEMENT_INLINE_H__ */
